# gitrs

./: .editorconfig  .gitignore  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTORS.rst  Cargo.toml  LICENSE.rst  README.rst  build.rs  rustfmt.toml
src/: lib.rs
