# Cargo.toml
# ==========
#
# Copying
# -------
#
# Copyright (c) 2022 gitrs authors and contributors.
#
# This file is part of the *gitrs* project.
#
# gitrs is a free software project. You can redistribute it and/or modify it
# following the terms of the MIT License.
#
# This software project is distributed *as is*, WITHOUT WARRANTY OF ANY KIND;
# including but not limited to the WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
# PARTICULAR PURPOSE and NONINFRINGEMENT.
#
# You should have received a copy of the MIT License along with *gitrs*. If
# not, see <http://opensource.org/licenses/MIT>.

[package]
name = "git"
edition = "2021"
version = "0.5.0-alpha.0"
authors = ["See `AUTHORS.rst`"]
license = "MIT"
description = """
A pure Rust implementation of the Git core methods. This project is currently
unstable, use [git2](https://crates.io/crates/git2) in the meanwhile.
"""
repository = "https://github.com/spack971/gitrs"
keywords = [
    "git",
]

[lib]
name = "git"
